tests/codegen/fail/unsupported_match_build.ql
fn main() -> Int {
    let flag = true
    return match flag {
        true if flag => 1,
        false => 0,
    }
}
