tests/codegen/fail/unsupported_match_build.stderr
error: tests/codegen/fail/unsupported_match_build.ql:3:12: LLVM IR backend foundation does not support `match` lowering yet
      return match flag {
             ^^^^^^^^
